--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dumindapriyasad.github.io",
+  "name": "harshapathmasiri.github.io",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
